--- a/about-kennels.html
+++ b/about-kennels.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -42,13 +42,13 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="active" href="#">HOME</a>
+                        <a class="#" href="#">HOME</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">ABOUT</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">KENNELS</a>
+                        <a class="active" href="#services">KENNELS</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">CATTERY</a>
@@ -88,72 +88,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Your Pets HOME</h1>
-                    <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: red; font-size: 30px;">WEBSITE UNDER CONSTRUCTION</span></h1>
+                    <h1 class="first-paragph">Aout</h1>
+                    <h1 class="second-paragph">KENNELS</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- About Section -->
-    <section id="about" class="about-section">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon1.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon2.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon3.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon4.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="section3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 display-none">
-                    <img src="img/home-img-2.png" class="img-responsive" >
-                </div>
-
-                <div class="col-md-6 col-xs-12 col-sm-12 section3-body" style="padding: 0px 20px">
-                    <h1>How it all Began</h1>
-                    <img src="img/3points.svg" style="width:70px">
-                    <p>It all started with a bad haircut day, not me but my dog ‘Berty’, at the local kennels. So off to the UK I went on a month long grooming course and that’s how Posh Paws grooming started. It wasn’t long before, my clients were asking me to take care of their dogs during the summer holidays; so that’s how the boarding started and it grew and it grew. That’s when I had to open up Posh Paws Boarding Kennels and Cattery to cope with the growing demand for a high quality kennel with a caring and attentive staff</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+ 
+    <!-- First Section -->
+    <section>
+        <div class="first_section-kannels">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 fs-image-h-button">
+                        <img src="img/home-icon1.svg">
+                        <h1>Kennels</h1>
+                        <img src="img/3points.svg" style="width:50px"><br>
+                        <button>Book an Appointment</button>
+                    </div>
+                    <div class="col-md-8 fs-text-h">
+                        <h1 class="display-none">Kennels</h1>
+                        <p>We have in total 102 kennels, 42 large and 60 medium, all are equipped with A/C and each have their own private shaded garden. In addition we have 12 communal areas, all with paddling pools, tunnels and toys. These areas are shaded and grassed and have great views of the farm with its acres of land. Dogs are fed twice daily with Royal Canin biscuits and Butch meat, special diets can also be catered for. All dogs are given Frontline on entry to the kennel at a charge of Dhs 60 to protect against ticks and fleas, ticks being a very common problem in the U.A.E.</p>
+                        <h1>Pricing</h1>
+                        <p>Small to 10Kg Dhs 90 per night<br>
+                            Medium to 20Kg Dhs 100 per night<br>
+                            Large 20+Kg Dhs 110 per night<br>
+                            20% discount for additional pets.<br>
+                            Long term stay - please enquire for rates.</p>
+                    </div>
+                    <div class="col-md-12" style="text-align: center">
+                        <button class="fs-text-h-button">Book an Appointment</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
@@ -196,7 +167,7 @@
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
-                    <img src="img/3points.svg" class="points3">
+                    <img src="img/3points.svg" style="width:50px">
                     <h4>PO Box 6273 Ajman</h4>
                     <p>Opening Hours 9am – 5pm</p>
                     <p>Office: 050 2730973</p>
