--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/contacts.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="active" href="#">HOME</a>
+                        <a class="#" href="#">HOME</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">ABOUT</a>
@@ -69,7 +69,7 @@
                         <a class="#" href="#">SHOP</a>
                     </li>
                     <li>
-                        <a class="#" href="#">CONTACT</a>
+                        <a class="active" href="#">CONTACT</a>
                     </li>
                     <li class="navigationbar-icons">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -91,65 +91,6 @@
                     <h1 class="first-paragph">Your Pets HOME</h1>
                     <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: red; font-size: 30px;">WEBSITE UNDER CONSTRUCTION</span></h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about-section">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon1.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon2.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon3.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon4.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="section3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 display-none">
-                    <img src="img/home-img-2.png" class="img-responsive" >
-                </div>
-
-                <div class="col-md-6 col-xs-12 col-sm-12 section3-body" style="padding: 0px 20px">
-                    <h1>How it all Began</h1>
-                    <img src="img/3points.svg" style="width:70px">
-                    <p>It all started with a bad haircut day, not me but my dog ‘Berty’, at the local kennels. So off to the UK I went on a month long grooming course and that’s how Posh Paws grooming started. It wasn’t long before, my clients were asking me to take care of their dogs during the summer holidays; so that’s how the boarding started and it grew and it grew. That’s when I had to open up Posh Paws Boarding Kennels and Cattery to cope with the growing demand for a high quality kennel with a caring and attentive staff</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
@@ -196,7 +137,7 @@
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
-                    <img src="img/3points.svg" class="points3">
+                    <img src="img/3points.svg" style="width:50px">
                     <h4>PO Box 6273 Ajman</h4>
                     <p>Opening Hours 9am – 5pm</p>
                     <p>Office: 050 2730973</p>
