--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -42,10 +42,10 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="active" href="#">HOME</a>
+                        <a class="#" href="#">HOME</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">ABOUT</a>
+                        <a class="active" href="#about">ABOUT</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">KENNELS</a>
@@ -88,8 +88,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Your Pets HOME</h1>
-                    <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: red; font-size: 30px;">WEBSITE UNDER CONSTRUCTION</span></h1>
+                    <h1 class="first-paragph">How it</h1>
+                    <h1 class="second-paragph">ALL BEGAN</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
@@ -97,93 +97,19 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about-section">
+    <section id="about" class="about-section1">
         <div class="container">
             <div class="row">
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon1.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon2.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon3.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
-                <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
-                    <img src="img/home-icon4.svg" class="icons-a1">
-                    <h1>Kennels</h1>
-                    <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-
+                <h1>How it all Began</h1>
+                <img src="img/3points.svg" style="width:70px">
+                <p>It all started with a bad haircut day, not me but my dog ‘Berty’, at the local kennels. So off to the UK I went on a month long grooming course and that’s how Posh Paws grooming started. It wasn’t long before, my clients were asking me to take care of their dogs during the summer holidays; so that’s how the boarding started and it grew and it grew. That’s when I had to open up Posh Paws Boarding Kennels and Cattery to cope with the growing demand for a high quality kennel with a caring and attentive staff.</p>
+                <p>I wanted more than your usual Boarding Kennels and Cattery, I wanted a place that the dogs and cats had interest in, had fun, relaxed, socialised, lots of smells and open spaces, more like a holiday camp. If the owner’s could go on holiday, why shouldn’t their pets? That’s why being located on a lush green farm was the perfect place, chickens, goats and cows too!</p>
+                <p>None of my staff are employed for their looks or language skills!, but for their ability to communicate and understand the needs of the many pets that pass through our gates and make their stay an enjoyable and sociable one; a holiday place they want to come back to again and again.</p>
             </div>
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="section3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 display-none">
-                    <img src="img/home-img-2.png" class="img-responsive" >
-                </div>
-
-                <div class="col-md-6 col-xs-12 col-sm-12 section3-body" style="padding: 0px 20px">
-                    <h1>How it all Began</h1>
-                    <img src="img/3points.svg" style="width:70px">
-                    <p>It all started with a bad haircut day, not me but my dog ‘Berty’, at the local kennels. So off to the UK I went on a month long grooming course and that’s how Posh Paws grooming started. It wasn’t long before, my clients were asking me to take care of their dogs during the summer holidays; so that’s how the boarding started and it grew and it grew. That’s when I had to open up Posh Paws Boarding Kennels and Cattery to cope with the growing demand for a high quality kennel with a caring and attentive staff</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <div class="row">
-                <h1>Make an Appointment</h1>
-                <p>Please fill in this information to make an appointment!</p>
-                <img src="img/3points.svg" style="width:50px">
-            </div>
-            <div class="contact-section-email row">
-                <div class="col-md-4 small-padding">
-                    <input type="text" name="email" placeholder="Name">
-                </div>
-                <div class="col-md-4 small-padding">
-                    <input type="text" name="email" placeholder="Name">
-                </div>
-                <div class="col-md-4 small-padding">
-                    <input type="text" name="email" placeholder="Name">
-                </div>
-                <div class="col-md-12 col-xs-12 small-padding">
-                    <textarea placeholder="Input text" rows="7"></textarea>
-                </div>
-                <div class="col-md-12 small-padding" style="text-align: left;">
-                    <button>Confirm</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
+    <!-- Contact Section Maps-->
     <section class="contact-section2">
         <div class="container">
             <div class="row">
