--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/contacts.css">
+    <link rel="stylesheet" type="text/css" href="css/shop.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -60,10 +60,10 @@
                         <a class="#" href="about-relocation.html">RELOCATIONS</a>
                     </li>
                     <li>
-                        <a class="#" href="shop.html">SHOP</a>
+                        <a class="active" href="shop.html">SHOP</a>
                     </li>
                     <li>
-                        <a class="active" href="contact.html">CONTACT</a>
+                        <a class="#" href="contact.html">CONTACT</a>
                     </li>
                     <li class="navigationbar-icons">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -82,9 +82,48 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Get in tocuh</h1>
-                    <h1 class="second-paragph">WITH POSHPAWS</h1>
+                    <h1 class="first-paragph">Your Pets HOME</h1>
+                    <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: #fe908b; font-size: 30px;">"WEBSITE UNDER CONSTRUCTION"</span></h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 1 -->
+    <section id="about" class="section-1">
+        <div class="container">
+            <div class="row">
+                <h1>Petting Farm</h1>
+                <p>Located at Al Hamra Stables, Dubai is a most amazing petting farm. The Petting farm is open 7 days a week, you can feed and pet the animals, have a pony ride or simply relax and enjoy our coffee shop overlooking the farm.
+                Nearly all the animals at the petting farm are donated or rescued animals, some needing homes. We are supported by Poshpaws boarding kennels and cattery. Volunteers are always needed in the farm and for outside events and adoption days, contact us on 056 6044091. We have many pets for adoption or fostering from hamsters, birds, dogs and cats. Animals are available for hire and even photo shoots!! </p>
+                <span>Sponsorship certificates available.</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section id="services" class="section2">
+        <div class="container">
+            <div class="row padding-middle">
+                <div class="col-md-6 image-section">
+                    <img src="img/img30.png">
+                </div>
+                <div class="col-md-6 text-section">
+                    <h1>School Trips to Farm / School Visits</h1>
+                    <img src="img/3points.svg" style="width:70px">
+                    <p>An excellent way to give students of all ages a fun filled educational experience is a trip to our farm, they can pet, hold and feed their favorite animals. We can also bring the animals to your school, ideal for the younger age groups. Firsthand experience allows them to appreciate the animal’s needs and understand that animals need love too! Book your school trip today. </p>
+                </div>
+            </div>
+            <div class="row padding-middle">
+                <div class="col-md-6 text-section">
+                    <h1>Celebrating your Birthday Party 
+                    or event with our animals…</h1>
+                    <img src="img/3points.svg" style="width:70px">
+                    <p>An excellent way to give students of all ages a fun filled educational experience is a trip to our farm, they can pet, hold and feed their favorite animals. We can also bring the animals to your school, ideal for the younger age groups. Firsthand experience allows them to appreciate the animal’s needs and understand that animals need love too! Book your school trip today. </p>
+                </div>
+                <div class="col-md-6 image-section">
+                    <img src="img/img31.png">
                 </div>
             </div>
         </div>
@@ -94,58 +133,12 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
-                <h1>Make an Appointment</h1>
-                <p>Please fill in this information to make an appointment!</p>
-                <img src="img/3points.svg" style="width:50px">
-            </div>
-            <div class="contact-section-email row">
-                <div class="col-md-4 small-padding">
-                    <input type="text" name="email" placeholder="Name">
-                </div>
-                <div class="col-md-4 small-padding">
-                    <input type="text" name="email" placeholder="Name">
-                </div>
-                <div class="col-md-4 small-padding">
-                    <input type="text" name="email" placeholder="Name">
-                </div>
-                <div class="col-md-12 col-xs-12 small-padding">
-                    <textarea placeholder="Input text" rows="7"></textarea>
-                </div>
-                <div class="col-md-12 small-padding" style="text-align: left;">
-                    <button>Confirm</button>
-                </div>
+                
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section class="contact-section2">
-        <div class="container">
-            <div class="row">
-               <div class="col-md-6 display-none">
-                   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <div style='overflow:hidden;height:400px;width:100%;'>
-                        <div id='gmap_canvas' style='height:400px;width:100%;'></div>                     
-                    </div> <a href='http://maps-generator.com/'>&nbsp;</a>
-
-               </div>
-               <div class="col-md-6 col-xs-12">
-                   <h1>Contact Info</h1>
-                    <img src="img/3points.svg" style="width:50px">
-                    <h4>PO Box 6273 Ajman</h4>
-                    <p>Opening Hours 9am – 5pm</p>
-                    <p>Office: 050 2730973</p>
-                    <p>poshpawsdubai@yahoo.co.uk</p>
-               </div>
-               <div class="col-xs-12 socialmedia-footer0">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-            </div>
-            </div>
-        </div>
-    </section>
-
+    <!-- Footer -->
     <footer class="container-fluid display-none">
         <div class="container">
             <div class="col-md-6 rights-footer">
