--- a/about-cattery.html
+++ b/about-cattery.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/contacts.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -51,7 +51,7 @@
                         <a class="#" href="about-kennels.html">KENNELS</a>
                     </li>
                     <li>
-                        <a class="#" href="about-cattery.html">CATTERY</a>
+                        <a class="active" href="about-cattery.html">CATTERY</a>
                     </li>
                     <li>
                         <a class="#" href="about-grooming.html">GROOMING</a>
@@ -63,7 +63,7 @@
                         <a class="#" href="shop.html">SHOP</a>
                     </li>
                     <li>
-                        <a class="active" href="contact.html">CONTACT</a>
+                        <a class="#" href="contact.html">CONTACT</a>
                     </li>
                     <li class="navigationbar-icons">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -78,17 +78,48 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="header-section">
+    <section id="intro" class="header-section-cattery">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Get in tocuh</h1>
-                    <h1 class="second-paragph">WITH POSHPAWS</h1>
+                    <h1 class="first-paragph">Aout</h1>
+                    <h1 class="second-paragph">CATTERY</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
     </section>
+ 
+    <!-- First Section Cattery-->
+    <section>
+        <div class="first_section-kannels">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 fs-image-h-button">
+                        <img src="img/home-icon2.svg">
+                        <h1>Kennels</h1>
+                        <img src="img/3points.svg" style="width:50px"><br>
+                        <button>Book an Appointment</button>
+                    </div>
+                    <div class="col-md-8 fs-text-h">
+                        <h1 class="display-none">Kennels</h1>
+                        <p>We have in total 102 kennels, 42 large and 60 medium, all are equipped with A/C and each have their own private shaded garden. In addition we have 12 communal areas, all with paddling pools, tunnels and toys. These areas are shaded and grassed and have great views of the farm with its acres of land. Dogs are fed twice daily with Royal Canin biscuits and Butch meat, special diets can also be catered for. All dogs are given Frontline on entry to the kennel at a charge of Dhs 60 to protect against ticks and fleas, ticks being a very common problem in the U.A.E.</p>
+                        <p>We have in total 102 kennels, 42 large and 60 medium, all are equipped with A/C and each have their own private shaded garden. In addition we have 12 communal areas, all with paddling pools, tunnels and toys. These areas are shaded and grassed and have great views of the farm with its acres of land. Dogs are fed twice daily with Royal Canin biscuits and Butch meat, special diets can also be catered for. All dogs are given Frontline on entry to the kennel at a charge of Dhs 60 to protect against ticks and fleas, ticks being a very common problem in the U.A.E.</p>
+                        <h1>Pricing</h1>
+                        <p>Small to 10Kg Dhs 90 per night<br>
+                            Medium to 20Kg Dhs 100 per night<br>
+                            Large 20+Kg Dhs 110 per night<br>
+                            20% discount for additional pets.<br>
+                            Long term stay - please enquire for rates.</p>
+                    </div>
+                    <div class="col-md-12" style="text-align: center">
+                        <button class="fs-text-h-button">Book an Appointment</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
