--- a/about-grooming.html
+++ b/about-grooming.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/contacts.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -54,7 +54,7 @@
                         <a class="#" href="about-cattery.html">CATTERY</a>
                     </li>
                     <li>
-                        <a class="#" href="about-grooming.html">GROOMING</a>
+                        <a class="active" href="about-grooming.html">GROOMING</a>
                     </li>
                     <li>
                         <a class="#" href="about-relocation.html">RELOCATIONS</a>
@@ -63,7 +63,7 @@
                         <a class="#" href="shop.html">SHOP</a>
                     </li>
                     <li>
-                        <a class="active" href="contact.html">CONTACT</a>
+                        <a class="#" href="contact.html">CONTACT</a>
                     </li>
                     <li class="navigationbar-icons">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -78,17 +78,41 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="header-section">
-        <div class="container">
+    <section id="intro" class="header-section-grooming">
+        <div class="container grooming-header-text">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Get in tocuh</h1>
-                    <h1 class="second-paragph">WITH POSHPAWS</h1>
+                    <h1 class="first-paragph">Aout</h1>
+                    <h1 class="second-paragph">GROOMING</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
     </section>
+ 
+    <!-- First Section Cattery-->
+    <section>
+        <div class="first_section-kannels">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 fs-image-h-button">
+                        <img src="img/home-icon3.svg">
+                        <h1>Kennels</h1>
+                        <img src="img/3points.svg" style="width:50px"><br>
+                        <button>Book an Appointment</button>
+                    </div>
+                    <div class="col-md-8 fs-text-h">
+                        <h1 class="display-none">Grooming</h1>
+                        <p>Posh Paws grooming has been operating since 2004 and has built up an excellent reputation. The salon is open 6 days a week by appointment only. All staff are professionally trained and are very understanding of the pets individual needs. We offer a daily collection & delivery service from door to door.</p>
+                    </div>
+                    <div class="col-md-12" style="text-align: center">
+                        <button class="fs-text-h-button">Book an Appointment</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
