--- a/about-relocation.html
+++ b/about-relocation.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/contacts.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
@@ -57,13 +57,13 @@
                         <a class="#" href="about-grooming.html">GROOMING</a>
                     </li>
                     <li>
-                        <a class="#" href="about-relocation.html">RELOCATIONS</a>
+                        <a class="active" href="about-relocation.html">RELOCATIONS</a>
                     </li>
                     <li>
                         <a class="#" href="shop.html">SHOP</a>
                     </li>
                     <li>
-                        <a class="active" href="contact.html">CONTACT</a>
+                        <a class="#" href="contact.html">CONTACT</a>
                     </li>
                     <li class="navigationbar-icons">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -78,17 +78,41 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="header-section">
-        <div class="container">
+    <section id="intro" class="header-section-relocation">
+        <div class="container grooming-header-text">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Get in tocuh</h1>
-                    <h1 class="second-paragph">WITH POSHPAWS</h1>
+                    <h1 class="first-paragph">Aout</h1>
+                    <h1 class="second-paragph">CATTERY</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
     </section>
+ 
+    <!-- First Section Cattery-->
+    <section>
+        <div class="first_section-kannels">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 fs-image-h-button">
+                        <img src="img/home-icon4.svg">
+                        <h1>Relocation</h1>
+                        <img src="img/3points.svg" style="width:50px"><br>
+                        <button>Book an Appointment</button>
+                    </div>
+                    <div class="col-md-8 fs-text-h">
+                        <h1 class="display-none">Relocation</h1>
+                        <p>Our relocation department can assist you with all the necessary information required in exporting or importing your pets worldwide. We like to ensure that your pet arrives safely. Please contact us at poshpawsdubai@hotmail.com or call the office with your enquiry.</p>
+                    </div>
+                    <div class="col-md-12" style="text-align: center">
+                        <button class="fs-text-h-button">Book an Appointment</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
