--- a/index.html
+++ b/index.html
@@ -42,34 +42,28 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="active" href="#">HOME</a>
+                        <a class="active" href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">ABOUT</a>
+                        <a class="#" href="about.html">ABOUT</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">KENNELS</a>
+                        <a class="#" href="about-kennels.html">KENNELS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">CATTERY</a>
+                        <a class="#" href="about-cattery.html">CATTERY</a>
                     </li>
                     <li>
-                        <a class="#" href="#">CATTERY</a>
+                        <a class="#" href="about-grooming.html">GROOMING</a>
                     </li>
                     <li>
-                        <a class="#" href="#">GROOMING</a>
+                        <a class="#" href="about-relocation.html">RELOCATIONS</a>
                     </li>
                     <li>
-                        <a class="#" href="#">CATTERY</a>
+                        <a class="#" href="shop.html">SHOP</a>
                     </li>
                     <li>
-                        <a class="#" href="#">RELOCATIONS</a>
-                    </li>
-                    <li>
-                        <a class="#" href="#">SHOP</a>
-                    </li>
-                    <li>
-                        <a class="#" href="#">CONTACT</a>
+                        <a class="#" href="contact.html">CONTACT</a>
                     </li>
                     <li class="navigationbar-icons">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -89,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-12 cover-text">
                     <h1 class="first-paragph">Your Pets HOME</h1>
-                    <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: red; font-size: 30px;">WEBSITE UNDER CONSTRUCTION</span></h1>
+                    <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: #fe908b; font-size: 30px;">"WEBSITE UNDER CONSTRUCTION"</span></h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
