Beta version finished

--- a/about.html
+++ b/about.html
@@ -103,6 +103,54 @@
         </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials-section1">
+        <div class="container">
+            <div class="top-testimonials">
+                <div class="col-md-12">
+                    <h1>Testimonials</h1>
+                </div>
+                <img src="img/3points.svg" style="width:50px">                
+            </div>
+            <div class="testim-1 col-md-4">
+                <div class="row test-top-text">
+                    <img src="img/pikep1.svg">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+                <div class="row test-bottom">
+                    <img src="img/avatar-1.png">
+                    <h5>Sacha Christe</h5>
+                    <p>General Manager</p>
+                </div>
+            </div>
+
+            <div class="testim-1 col-md-4">
+                <div class="row test-top-text" style="background-color: #fe908b; border: none;">
+                    <img src="img/pikep12.svg">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+                <div class="row test-bottom">
+                    <img src="img/avatar-1.png">
+                    <h5>Sacha Christe</h5>
+                    <p>General Manager</p>
+                </div>
+            </div>
+
+            <div class="testim-1 col-md-4">
+                <div class="row test-top-text">
+                    <img src="img/pikep1.svg">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+                <div class="row test-bottom">
+                    <img src="img/avatar-1.png">
+                    <h5>Sacha Christe</h5>
+                    <p>General Manager</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Contact Section Maps-->
     <section class="contact-section2">
         <div class="container">
