ndrryshimet ne ngjyra

--- a/about-grooming.html
+++ b/about-grooming.html
@@ -82,7 +82,7 @@
         <div class="container grooming-header-text">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Aout</h1>
+                    <h1 class="first-paragph">About</h1>
                     <h1 class="second-paragph">GROOMING</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
@@ -115,7 +115,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+<!--     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <h1>Make an Appointment</h1>
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section class="contact-section2">
