--- a/about-relocation.html
+++ b/about-relocation.html
@@ -115,7 +115,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+<!--     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <h1>Make an Appointment</h1>
@@ -141,7 +141,7 @@
             </div>
         </div>
     </section>
-
+ -->
     <!-- Contact Section -->
     <section class="contact-section2">
         <div class="container">
