--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
     <!-- Testimonials Section -->
-    <section>
+    <section class="testimonials-section1">
         <div class="container">
             <div class="top-testimonials">
                 <div class="col-md-12">
