--- a/about-cattery.html
+++ b/about-cattery.html
@@ -122,7 +122,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+<!--     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <h1>Make an Appointment</h1>
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section class="contact-section2">
