ndrryshimi i faqes shop ne farm

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                         <a class="#" href="about-relocation.html">RELOCATIONS</a>
                     </li>
                     <li>
-                        <a class="#" href="shop.html">SHOP</a>
+                        <a class="#" href="farm.html">PETTING FARM</a>
                     </li>
                     <li>
                         <a class="active" href="contact.html">CONTACT</a>
