--- a/farm.html
+++ b/farm.html
@@ -61,7 +61,7 @@
                         <a class="#" href="about-relocation.html">RELOCATIONS</a>
                     </li>
                     <li>
-                        <a class="active" href="shop.html">SHOP</a>
+                        <a class="active" href="farm.html">PETTING FARM</a>
                     </li>
                     <li>
                         <a class="#" href="contact.html">CONTACT</a>
@@ -83,8 +83,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Your Pets HOME</h1>
-                    <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: #fe908b; font-size: 30px;">"WEBSITE UNDER CONSTRUCTION"</span></h1>
+                    <h1 class="first-paragph">Poshpaws Animal Sanctuary <br>
+and Petting Farm at Al Hamra <br>
+Stables, Al Khawaneej 2, Dubai</h1>
                     <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
